document rental routes
